Last updated: 2021 Apr 26
------------

Change log
----------

2020 Apr 26

 - Added vp_shape='zero'

2020 Dec 17

 - Added cubic-spline field input (vp_shape="spline")

2020 Jul 17

 - Added support for infinitely-high repulsive barrier at the origin, 
   through SD_RGRID_RMIN input parameter.

2020 Jul 13

 - Added effective potentials from Garvey, Jackman, and Green, PRA 12, 1144 
   (1975), and a generalized input form inspired by these potentials.

2020 Feb 04

 - Added support for reading channel-dependent effective potentials in the
   general exponential form.

2019 Dec 23

 - Added support for reading channel-dependent effective potentials in the
   extended Tong-Lin form.

2019 Nov 13

 - Minor fixes to allow building with AOCC 2.0. There appears to be no 
   performance advantage to using it - both gfortran (7.0+) and ifort
   are always faster.

2018 Oct 08

 - Changed the sematics of sd_tolerance_r and sd_tolerance_l to have separate
   cut-offs for the left and right wavefunctions.

2018 Aug 21

 - Broadcast results of NINT(), MINLOC() and MAXLOC() intrinsics where
   otherwise inconsistent state may arise in heterogeneous multi-none
   runs. The problem affected two of the test cases.

2018 Jul 30

 - Added electric field to the detailed output. Tweaked time-step subdivision
   again to reduce high-frequency artifacts.

2018 Jul 10

 - Changed the semantics and the default of the DT_MAX_LA parameter. The
   revised version seems to yield better results at very high intensities.

2018 Jun 20

 - Added support for distributed-memory parallelization with MPI. Please
   make sure to read "README-MPI.txt" before using!

2018 Jun 08

 - Fixed execssive memory usage for large-angle rotations

2018 Feb 08

 - Added [neon 3/2] and [neon 1/2] special-purpose potentials.

2017 Oct 10

 - Full implementation of adaptive NRADIAL. Incremented checkpoint
   version once again.

2017 Oct 09

 - Partially implemented adaptive NRADIAL, which marginally improves the